The title is useless at this stage. Removing the comment. Added a meta status draft. Added meta for the dates instead of paragraph.

--- a/test/article-raw.html
+++ b/test/article-raw.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <!-- <title>Prototype for new design</title> -->
+<meta name="status" content="draft">
+<meta name="created" content="2012-01-08">
+<meta name="modified" content="2012-01-08">
 <body>
 
 <h1>Un nouveau design ajusté pour La Grange <span lang="ja">森野</span></h1>
-<p class="datepub">2012-01-08</p>
-<p class="dateupd">2012-01-09</p>
 
 <figure>
     <img src="/2011/11/25/0201-risques" alt="panneau sur un mur"/>
