remove the trailing slash of test files

--- a/test/article-raw-without-title.html
+++ b/test/article-raw-without-title.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<meta charset="utf-8"/>
+<meta charset="utf-8">
 <meta name="status" content="draft">
 <body>
 <p>boo</p>
