--- a/test/article-raw-no-status.html
+++ b/test/article-raw-no-status.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<meta charset="utf-8"/>
+<meta charset="utf-8">
 <body>
 <h1>Un nouveau design ajusté pour La Grange <span lang="ja">森野</span></h1>
 </body>
