--- a/test/article-raw-two-meta.html
+++ b/test/article-raw-two-meta.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<meta charset="utf-8"/>
+<meta charset="utf-8">
 <meta name="status" content="draft">
 <meta name="status" content="acl">
 <body>
