--- a/test/article-raw.html
+++ b/test/article-raw.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<meta charset="utf-8"/>
+<meta charset="utf-8">
 <meta name="status" content="draft">
 <meta name="created" content="2012-01-08">
 <meta name="modified" content="2012-01-08">
