slightly modified the class values

--- a/test/article-pub.html
+++ b/test/article-pub.html
@@ -15,11 +15,11 @@
     <div class="meta pubdates">
         <span class="pubdate">
             <span class="pubdate-msg">Publié : </span>
-            <span class="created longdate">1er décembre 2011</span>
+            <span class="created">1er décembre 2011</span>
         </span>
         <span class="maj">
             <span class="maj-msg">Mise à jour : </span>
-            <span class="modified iso">2011-12-01</span>
+            <span class="modified">2011-12-01</span>
         </span>
     </div>
 <h1>Un nouveau design ajusté pour La Grange <span lang="ja">森野</span>　</h1>
