modification of tests for viewport

--- a/test/article-raw.html
+++ b/test/article-raw.html
@@ -17,7 +17,7 @@
     <blockquote cite="urn:isbn:12345679087">
     <p>La seule liberté digne de ce nom est celle de travailler à notre propre bien de la manière qui nous est propre, pour autant que nous ne cherchions pas à en priver les autres ou à leur faire obstacle dans leurs efforts pour l’obtenir.</p></blockquote>
     <p class="source"><span class="auteur">John Stuart Mill</span>, <cite class="titre">De la liberté</cite></p>
-</div>    
+</div>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
@@ -70,8 +70,8 @@ f.close()
 </article>
 
 
-<footer> 
-<address id="signature">Ce texte est publié par <span id="auteur"><a href="/karl/">Karl</a></span> sous un <a rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/">contrat Creative Commons</a>. <a id="glicense" rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/"><img alt="Creative Commons License" style="padding:0 1em;margin-bottom:7px;border-width:0" src="/2011/09/30/style/80x15-by" /></a></address>
+<footer>
+<address id="signature">Ce texte est publié par <span id="auteur"><a href="/karl/" rel="author">Karl</a></span></address> sous un <a rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/">contrat Creative Commons</a>. <a id="glicense" rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/"><img alt="Creative Commons License" style="padding:0 1em;margin-bottom:7px;border-width:0" src="/2011/09/30/style/80x15-by" /></a>
 
 </footer>
 
