--- a/tests/fixtures/title-simple.html
+++ b/tests/fixtures/title-simple.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <meta charset="utf-8">
-<meta name="status" content="draft">
 <body>
-<p>boo</p>
+<h1>Simple title</h1>
 </body>
 </html>
